# TCP_Proxy_Server

./: CMakeLists.txt  README.md  tcp_proxy_server
include/: Logger.h  TCPProxyServer.h
log_processor/: CMakeLists.txt  log_processor  logs.db
log_processor/data/: large_log.txt
log_processor/include/: logger.h  logger_processor.h
log_processor/src/: logger.cpp  logger_processor.cpp  main.cpp
messageFragmentationLibrary/: CMakeLists.txt  README.md  test
messageFragmentationLibrary/include/: Fragment.h  MessageAssembler.h  MessageFragmenter.h
messageFragmentationLibrary/src/: MessageAssembler.cpp  MessageFragmenter.cpp  main.cpp
src/: Logger.cpp  TCPProxyServer.cpp  main.cpp
tcp_proxy_server/: CMakeLists.txt
tcp_proxy_server/src/: main.cpp
